# opencog-unified

./: .gitignore  .pre-commit-config.yaml  AUTONOMOUS-AGENCY-ROADMAP.md  BUILD_OPTIMIZATION_GUIDE.md  CMakeLists.txt  CMakeLists_available.txt  CMakeLists_integration.txt  CMakeLists_optimized.txt  CODEBASE_TODO_TRACKER.md  COGNITIVE_ARCHITECTURE_ENHANCEMENT_PROPOSAL.md  COMPREHENSIVE-TODO-CATALOG.md  CORE_SELF_AWARENESS_GUIDE.md  CORE_SELF_AWARENESS_README.md  CRITICAL-IMPLEMENTATIONS.md  DEPENDENCY_ANALYSIS_SUMMARY.md  DEVELOPMENT-ROADMAP.md  EMERGENT-PHENOMENA-INTEGRATION.md  ENTELECHY_DASHBOARD.txt  ENTELECHY_DEEP_INTROSPECTION.md  ENTELECHY_FRAGMENTATION_SUMMARY.md  ENTELECHY_MARKER_RESOLUTION.md  FIXME-SORTED-CATALOG.md  FIXME_IMPLEMENTATION_GUIDE.md  FIXME_NEXT_STEPS_IMPLEMENTATION_SUMMARY.md  FIXME_RESOLUTION_PROGRESS_REPORT.md  FIXME_RESOLUTION_SUMMARY.md  IMPLEMENTATION-ROADMAP.md  IMPLEMENTATION-STRATEGY.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTROSPECTION_README.md  ISSUE-74-FIXME-ANALYSIS.md  ITERATION-4-ENHANCEMENT-SUMMARY.md  Makefile.fixme  OPTIMAL_BUILD_SEQUENCE.md  PHASE-II-README.md  PHASE-IV-V-IMPLEMENTATION.md  PHASE1_INTEGRATION_RESULTS.md  (+109 more)
agentic-kernels-catalog/: CMakeLists.txt  README.md  agentic_kernels_catalog.json  demo_agentic_catalog.py
agentic-kernels-catalog/scheme/: agentic-catalog.scm
agentic-kernels-catalog/src/: AgenticCatalogManager.cpp  AgenticKernelSpec.cpp  KernelDegreeAnalyzer.cpp  PrimeFactorizationShapeDeriver.cpp  SerializationEngine.cpp
agentic-kernels-catalog/tests/: CMakeLists.txt  test-agentic-catalog.scm  test_catalog_manager.cpp  test_degree_analyzer.cpp  test_kernel_spec.cpp  test_main.cpp  test_serialization.cpp  test_shape_deriver.cpp
asmoses/: CMakeLists.txt
atomspace-storage/cmake/: AtomSpaceStorageConfig.cmake.in  CMakeLists.txt
attention/: CMakeLists.txt
attention/src/: AttentionBank.cc  AttentionModule.cc  AttentionValue.cc  ECANAgent.cc  ForgettingAgent.cc  ImportanceSpreadingAgent.cc
attention/tests/: CMakeLists.txt  test_attention_bank.cpp  test_attention_integration.cpp  test_attention_value.cpp  test_ecan_agent.cpp
autonomous-agency/: CMakeLists.txt
autonomous-agency/bootstrap/: bootstrap-resource-manager.cpp  bootstrap-resource-manager.hpp  entropic-drift-detector.cpp  entropic-drift-detector.hpp  self-healing-atomspace.cpp  self-healing-atomspace.hpp
autonomous-agency/config/: autonomous-agency-config.json
autonomous-agency/docs/: STAGE-1-IMPLEMENTATION-SUMMARY.md
autonomous-agency/examples/: bootstrap-example.cpp
autonomous-agency/scripts/: validate-bootstrap.py
autonomous-agency/tests/: integration-test.cpp
cognitive-patterns/: CMakeLists.txt
cognitive-patterns/include/: AdaptivePatternRecognitionFusionEngine.h  HypergraphPatternExtractor.h  PerceptualInputProcessor.h
cognitive-patterns/scheme/: aprfe-integration.scm  emergent-patterns.scm  perceptual-input.scm
cognitive-patterns/src/: AdaptivePatternRecognitionFusionEngine.cc  HypergraphPatternExtractor.cc  PerceptualInputProcessor.cc
cognitive-visualization/: CMakeLists.txt
cognitive-visualization/include/: AttentionOverlay.h  CognitiveVisualizer.h  HypergraphRenderer.h  RealTimeIntrospector.h
cognitive-visualization/scheme/: cognitive-visualization-bridge.scm
cognitive-visualization/src/: AttentionOverlay.cc  CognitiveVisualizer.cc  HypergraphRenderer.cc  RealTimeIntrospector.cc
cognitive-visualization/web/: cognitive-visualization.js  index.html
distributed-cognition/: CMakeLists.txt
distributed-cognition/include/: CognitiveAgent.h  SharedHypergraphContext.h
distributed-cognition/scheme/: distributed-cognition.scm
distributed-cognition/src/: DistributedAtomSpaceSync.cc  ECANResourceManager.cc  MultiAgentStressTest.cc
distributed-cognitive-mesh/: CMakeLists.txt  README.md  demo_phase4.py
distributed-cognitive-mesh/api/: CMakeLists.txt  CognitiveMeshAPI.cc  CognitiveMeshAPI.h  EmbodimentTensorSignature.cc  EmbodimentTensorSignature.h
distributed-cognitive-mesh/embodiment/: CMakeLists.txt  SensoryMotorFeedbackLoop.h
distributed-cognitive-mesh/ros/: CMakeLists.txt  ROSCognitiveNode.h
distributed-cognitive-mesh/tests/: CMakeLists.txt
distributed-cognitive-mesh/unity3d/: CMakeLists.txt  Unity3DCognitiveInterface.h
distributed-cognitive-mesh/websocket/: CMakeLists.txt  CognitiveWebSocketServer.h
evolutionary-optimization/: CMakeLists.txt
evolutionary-optimization/examples/: CMakeLists.txt  evolutionary_demo.cc
evolutionary-optimization/include/: EvolutionaryOptimizer.h
evolutionary-optimization/src/: EvolutionaryOptimizer.cc
ggml-tensor-kernel/: CMakeLists.txt  CMakeLists_backup.txt  CMakeLists_original.txt  COGNITIVE_PRIMITIVE_SPECIFICATION.md  EMERGENT_BEHAVIORS.md  NEURAL_SYMBOLIC_KERNEL_API.md  REAL_FUNCTIONALITY_SUMMARY.md  demo_real_functionality  demo_real_functionality.cpp  test_cognitive_primitive_implementation.cc  test_cognitive_primitives.py  test_phase3_kernels  test_phase3_neural_symbolic_kernels.cc  test_real_functionality  test_real_functionality.cpp  test_tensor_kernel_minimal.cc
ggml-tensor-kernel/include/: TensorBenchmark.h  atomspace_stub.h  ggml-cpu.h  ggml.h
ggml-tensor-kernel/scheme/: advanced-tensor-bridge.scm  cognitive-grammar-adapter.scm
ggml-tensor-kernel/src/: AtomSpaceTensorMapper_minimal.cc  AttentionAllocator.cc  AttentionAllocator_minimal.cc  CognitivePrimitive.cc  CognitivePrimitiveGuile.cc  NeuralSymbolicBridge.cc  NeuralSymbolicBridge.cc.backup  NeuralSymbolicInferencePipeline.cc  TensorBenchmark.cc  TensorKernel_minimal.cc  ggml_stub.c
language-learning/: CMakeLists.txt
language-learning/tests/: test_grammar_learner.py
learn/: CMakeLists.txt
lg-atomese/: CMakeLists.txt
meta-cognition/: CMakeLists.txt
meta-cognition/examples/: CMakeLists.txt  core_self_awareness_demo.cc  (+1 more)
miner/: CMakeLists.txt
neural-symbolic-integration/: CMakeLists.txt
opencog/: CMakeLists.txt
pln/: CMakeLists.txt
spacetime/: CMakeLists.txt
tutorial-automation/: CMakeLists.txt
(+375 files in other folders)
