cmake_minimum_required(VERSION 3.10)
project(opencog-unified VERSION 1.0.0)

# Set CMake policies to handle target conflicts
cmake_policy(SET CMP0002 NEW)  # Allow duplicate target names in subdirectories
if(POLICY CMP0167)
    cmake_policy(SET CMP0167 OLD)  # Use legacy FindBoost module
endif()

# Set C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Add cmake directory to module path
set(CMAKE_MODULE_PATH 
    ${CMAKE_CURRENT_SOURCE_DIR}/cmake
    ${CMAKE_CURRENT_SOURCE_DIR}/cogutil/cmake
    ${CMAKE_MODULE_PATH}
)

# Create deps directory if it doesn't exist
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/deps)

# Include dependencies if directory exists and has CMakeLists.txt
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/deps/CMakeLists.txt")
    add_subdirectory(deps)
endif()

# Include dependencies (commented out as deps directory doesn't exist)
# add_subdirectory(deps)

# Include unified cognitive modules
# Build cogutil first as it's a core dependency
add_subdirectory(cogutil)

# Export CogUtil configuration for other components
set(CogUtil_DIR "${CMAKE_CURRENT_BINARY_DIR}/cogutil" CACHE PATH "CogUtil build directory")
set(ENV{CogUtil_DIR} "${CMAKE_CURRENT_BINARY_DIR}/cogutil")

# Add atomspace (depends on cogutil)
add_subdirectory(atomspace)

# Add cogserver (depends on atomspace)
add_subdirectory(cogserver)

# Phase I: Core Extensions (Week 1)
# Add atomspace-storage if it exists and has CMakeLists.txt
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/atomspace-storage/CMakeLists.txt")
    add_subdirectory(atomspace-storage)
endif()

# Add atomspace-rocks if it exists and has CMakeLists.txt
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/atomspace-rocks/CMakeLists.txt")
    add_subdirectory(atomspace-rocks)
endif()

# Phase I: Core Extensions (Week 3)
# Add moses if it exists and has CMakeLists.txt
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/moses/CMakeLists.txt")
    add_subdirectory(moses)
endif()

# Define inter-module dependencies explicitly
add_dependencies(atomspace cogutil)
add_dependencies(cogserver atomspace)
# atomspace-storage depends on atomspace
if(TARGET atomspace-storage)
    add_dependencies(atomspace-storage atomspace)
endif()
# atomspace-rocks depends on atomspace
if(TARGET atomspace-rocks)
    add_dependencies(atomspace-rocks atomspace)
endif()
# cogserver optionally depends on atomspace-rocks for RocksDB storage tests
if(TARGET atomspace-rocks)
    add_dependencies(cogserver atomspace-rocks)
endif()
# moses depends on cogutil
if(TARGET moses)
    add_dependencies(moses cogutil)
endif()

# Phase II: Recursive Cognitive Expansion modules
# Create directories for new components
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cognitive-patterns)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/distributed-cognition) 
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cognitive-visualization)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tutorial-automation)

# Add Phase II modules if they have CMakeLists.txt
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/cognitive-patterns/CMakeLists.txt")
    add_subdirectory(cognitive-patterns)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/distributed-cognition/CMakeLists.txt")
    add_subdirectory(distributed-cognition)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/cognitive-visualization/CMakeLists.txt")
    add_subdirectory(cognitive-visualization)
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tutorial-automation/CMakeLists.txt")
    add_subdirectory(tutorial-automation)
endif()

# Add unified GGML tensor kernel
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/ggml-tensor-kernel/CMakeLists.txt")
    add_subdirectory(ggml-tensor-kernel)
endif()

# Add agentic kernels catalog
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/agentic-kernels-catalog/CMakeLists.txt")
    add_subdirectory(agentic-kernels-catalog)
endif()

# Phase II: Logic Systems Integration (Weeks 5-8)
# Add unify if it exists and has CMakeLists.txt (depends on atomspace)
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/unify/CMakeLists.txt")
    add_subdirectory(unify)
endif()

# Add ure (Unified Rule Engine) if it exists and has CMakeLists.txt (depends on unify)
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/ure/CMakeLists.txt")
    add_subdirectory(ure)
endif()

# Add language-learning if it exists and has CMakeLists.txt (depends on cogutil)
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/language-learning/CMakeLists.txt")
    add_subdirectory(language-learning)
endif()

# Global cognitive build targets
add_custom_target(cognitive ALL DEPENDS cogutil atomspace cogserver)

# Phase II Logic Systems target
add_custom_target(logic-systems
    COMMENT "Building Phase II logic systems components"
)

# Add dependencies for logic systems if targets exist
if(TARGET unify)
    add_dependencies(logic-systems unify)
    add_dependencies(unify atomspace)
endif()
if(TARGET ure)
    add_dependencies(logic-systems ure)
    add_dependencies(ure unify)
endif()
if(TARGET language-learning)
    add_dependencies(logic-systems language-learning)
    add_dependencies(language-learning cogutil)
endif()

# Phase III: Cognitive Systems Integration (Weeks 9-12)
# Add attention component (Week 9)
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/attention/CMakeLists.txt")
    add_subdirectory(attention)
endif()

# Add spacetime component (Week 10) - will be created next
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/spacetime/CMakeLists.txt")
    add_subdirectory(spacetime)
endif()

# Add Phase III cognitive systems target
add_custom_target(cognitive-systems
    COMMENT "Building Phase III cognitive systems components"
)

# Add dependencies for cognitive systems if targets exist
if(TARGET attention)
    add_dependencies(cognitive-systems attention)
    add_dependencies(attention atomspace cogserver)
endif()
if(TARGET spacetime)
    add_dependencies(cognitive-systems spacetime)
    add_dependencies(spacetime atomspace)
endif()

# Phase IV: Advanced & Learning Systems (Weeks 13-16)
# Add PLN (Probabilistic Logic Networks) - Week 13
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/pln/CMakeLists.txt")
    add_subdirectory(pln)
endif()

# Add Miner (Pattern Mining) - Week 14
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/miner/CMakeLists.txt")
    add_subdirectory(miner)
endif()

# Add ASMoses (AtomSpace MOSES) - Week 15
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/asmoses/CMakeLists.txt")
    add_subdirectory(asmoses)
endif()

# Add Phase IV advanced systems target
add_custom_target(advanced-systems
    COMMENT "Building Phase IV advanced and learning systems"
)

# Add dependencies for advanced systems if targets exist
if(TARGET pln)
    add_dependencies(advanced-systems pln)
    add_dependencies(pln atomspace ure spacetime)
endif()
if(TARGET miner)
    add_dependencies(advanced-systems miner)
    add_dependencies(miner atomspace ure)
endif()
if(TARGET asmoses)
    add_dependencies(advanced-systems asmoses)
    add_dependencies(asmoses atomspace ure)
endif()

# Phase V: Language & Final Integration (Weeks 17-20)
# Add lg-atomese (Link Grammar to AtomSpace) - Week 17
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/lg-atomese/CMakeLists.txt")
    add_subdirectory(lg-atomese)
endif()

# Add learn (Unsupervised Learning) - Week 18
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/learn/CMakeLists.txt")
    add_subdirectory(learn)
endif()

# Add opencog main integration - Week 19
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/opencog/CMakeLists.txt")
    add_subdirectory(opencog)
endif()

# Add Phase V language and final integration target
add_custom_target(language-integration
    COMMENT "Building Phase V language and final integration systems"
)

# Add dependencies for language integration if targets exist
if(TARGET lg-atomese)
    add_dependencies(language-integration lg-atomese)
    add_dependencies(lg-atomese atomspace)
endif()
if(TARGET learn)
    add_dependencies(language-integration learn)
    add_dependencies(learn atomspace cogserver)
endif()
if(TARGET opencog-main)
    add_dependencies(language-integration opencog-main)
    add_dependencies(opencog-main atomspace cogserver attention ure lg-atomese)
endif()

# Add comprehensive target that includes all phases
add_custom_target(cognitive-complete 
    DEPENDS cognitive agentic-kernels-catalog logic-systems cognitive-systems advanced-systems language-integration
    COMMENT "Building complete cognitive system with all phases: core, logic, cognitive, advanced, and language systems"
)